# foris-controller-openvpn_client-module

./: CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py
foris_controller_backends/openvpn_client/: __init__.py
foris_controller_modules/openvpn_client/: __init__.py  datatypes.py
foris_controller_modules/openvpn_client/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/openvpn_client/schema/: openvpn_client.json
foris_controller_openvpn_client_module/: __init__.py  utils.py
tests/: conftest.py  test_openvpn_client.py
tests/uci_configs/: firewall
